FIX: Overflow hide in Contact List

--- a/src/components/contact-list/contact-list.scss
+++ b/src/components/contact-list/contact-list.scss
@@ -1,3 +1,8 @@
 .height-fix-contact {
     height: 65px !important;
 }
+
+.contact-list {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
